# royal-putts-golf-tracker

./: .gitignore  .replit  SpecialQueryPeaked.sql  app.py  backup.sql  forms.py  main.py  models.py  pyproject.toml  views.py
static/css/: parallax.css
static/js/: parallax.js  scores.js
templates/: admin.html  bar_menu.html  base.html  find_game.html  game.html  history.html  home.html  player_comparison.html  scoring.html  stats.html
templates/admin/: account_management.html  course_settings.html  course_setup.html  course_stats.html  dashboard.html  localisations.html  login.html  stats_setup.html  superadmin.html
